--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark-des fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="\trangchu">DeveloperVN</a>
+        <a class="navbar-brand" href="\trangchu">
+            <img src="/media/{{logo.image}}" alt="DeveloperVietNam" title="DeveloperVietNam" height="35" width="35" class="mr_5"/>DeveloperVN
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
