--- a/App/templates/base_sub.html
+++ b/App/templates/base_sub.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}">
         <!-- icon tab chorme -->
-        <link rel="icon" type="image/png" sizes="32x32" href="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/fav/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/media/image/logo/logo.png">
         <!-- css  self-defined-->
         <link rel="stylesheet" href="{% static 'css/common.css' %}">
         <link rel="stylesheet" href="{% static 'css/base_sub.css' %}">
