--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -10,15 +10,11 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="First slide">
+            {% for banner in banner_list%}
+            <div class="carousel-item" id={{banner.priority}}>
+                <img class="d-block w-100" src="/media/{{banner.image}}" alt="{{banner.name}}">
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{% static 'image/banner/developerVN_baner.jpg' %}" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="Third slide">
-            </div>
+            {% endfor %}
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,4 +102,7 @@
 		</div>
 	</section>
 </article>
+<script>
+    $('#0').addClass('active');
+</script>
 {% endblock %}
