--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -120,50 +120,22 @@
         <div class="lesson_next_more mt_t10">
             <div class="card box-shadow support mb_20 mt_t10">
                 <div class="card-header">
-                    <a href="#"><h4>Chia sẻ <i class="fas fa-angle-double-right ml_10"></i></h4></a>
+                    <a href="/chiase"><h4>Chia sẻ <i class="fas fa-angle-double-right ml_10"></i></h4></a>
                 </div>
-                <div class="card-body sub_content nopadding">
+                <div class="card-body sub_content">
                     <div class="row_mr0">
+                        {% for post in post_list%}
                         <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
                             <div class="card">
                                 <div class="image_share">
-                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
+                                    <a href="/chiase/{{post.post_id}}/{{post.url_name}}"><img src="/media/{{post.image}}" alt="{{post.name}}" class="card-img-top rounded-top"></a>
                                 </div>
                                 <div class="card-body info_bank">
-                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản một bài học hữu ích vãi cả lò</h5></a>
+                                    <a href="/chiase/{{post.post_id}}/{{post.url_name}}"><h5 class="font_size_init title_share" alt="{{post.name}}">{{post.name}}</h5></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                            <div class="card">
-                                <div class="image_share">
-                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
-                                </div>
-                                <div class="card-body info_bank">
-                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                            <div class="card">
-                                <div class="image_share">
-                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
-                                </div>
-                                <div class="card-body info_bank">
-                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                            <div class="card">
-                                <div class="image_share">
-                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
-                                </div>
-                                <div class="card-body info_bank">
-                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
