--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -247,3 +247,8 @@ video{
 .navbar-brand{
     padding: 0;
 }
+.error{
+    text-align: left !important;
+    color: red !important;
+    width: 100%;
+}
