--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -17,6 +17,7 @@
 
         <!-- java script library-->
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
+        <script src="{% static 'js/jquery.validate.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}" async defer></script>
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
