--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -35,7 +35,7 @@
             </ul>
             <form class="form-inline my-2 my-md-0">
                 {% if user.username == '' %}
-                    <a type="button" class="btn btn-sm btn-rs text-while mr_5" href = "\dangky">Đăng Ký</a>
+                    <a type="button" class="btn btn-sm btn-rs text-while mr_5" href = "\dangky?path={{request.path}}">Đăng Ký</a>
                     <a type="button" class="btn btn-sm btn-rs text-while" href ="\dangnhap?path={{request.path}}">Đăng Nhập</a>                
                 {% else %}
                     <div class="btn-group mr_30">
@@ -43,7 +43,7 @@
                             {{ user.username}}
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#"><i class="fa fa-user mr_10"></i>Hồ sơ</a>
+                            <!-- <a class="dropdown-item" href="#"><i class="fa fa-user mr_10"></i>Hồ sơ</a> -->
                             <a class="dropdown-item" href="#"><i class="fas fa-key mr_10"></i>Đổi mật khẩu</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="\dangxuat?path={{request.path}}"><i class="fas fa-sign-out-alt mr_10"></i>Đăng xuất</a>
