--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -44,7 +44,7 @@
                         </button>
                         <div class="dropdown-menu">
                             <!-- <a class="dropdown-item" href="#"><i class="fa fa-user mr_10"></i>Hồ sơ</a> -->
-                            <a class="dropdown-item" href="#"><i class="fas fa-key mr_10"></i>Đổi mật khẩu</a>
+                            <a class="dropdown-item" href="\doimatkhau?path={{request.path}}"><i class="fas fa-key mr_10"></i>Đổi mật khẩu</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="\dangxuat?path={{request.path}}"><i class="fas fa-sign-out-alt mr_10"></i>Đăng xuất</a>
                         </div>
