--- a/App/templates/pages/register.html
+++ b/App/templates/pages/register.html
@@ -1,6 +1,6 @@
 {% extends "base_sub.html" %}
 {% load static %}
-{% block title %}DangKy{% endblock %}
+{% block title %}Đăng Ký{% endblock %}
 <!-- body -->
 {% block body %}
 <body class="text-center" style="background-image: url({% static 'image/background/sign_in.png' %})">
