--- a/App/templates/pages/sign_in.html
+++ b/App/templates/pages/sign_in.html
@@ -16,7 +16,7 @@
             {% if message != null %}
                 <p class="red">{{ message }}</p>
             {% endif %}
-            <a href="#" class="blue">Quên mật khẩu?</a>
+            <a href="\laylaimatkhau?path={{path}}" class="blue">Quên mật khẩu?</a>
         </div>      
         <button class="btn btn-lg btn-rs btn-block mt_t30 bold" type="submit">Đăng Nhập</button>
         <div class="text-left mt_t10 bold">
