--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -47,8 +47,7 @@
                                     {{ user.username}}
                                 </button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#"><i class="fas fa-info-circle mr_5"></i>Thông tin</a>
-                                    <a class="dropdown-item" href="#"><i class="fas fa-key mr_5"></i>Đổi mật khẩu</a>
+                                    <a class="dropdown-item" href="\doimatkhau?path={{request.path}}"><i class="fas fa-key mr_5"></i>Đổi mật khẩu</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="\dangxuat?path={{request.path}}"><i class="fas fa-sign-out-alt mr_5"></i>Đăng xuất</a>
                                 </div>
