--- a/App/templates/pages/error.html
+++ b/App/templates/pages/error.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Error</h1>
+        <h1>Rất xin lỗi! Đã có một lỗi phát sinh trong quá trình thực thi</h1>
         
         <script src="" async defer></script>
     </body>
