--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -59,6 +59,6 @@
                 </div>
             </div>
         </footer>
-        <button id="topBtn" title="Lên đầu trang"><i class="fas fa-angle-double-up font_size_30"></i></button>
+        <button id="topBtn" title="Lên đầu trang"><i class="fas fa-angle-up font_size_30"></i></button>
     </body>
 </html>
