--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -30,7 +30,7 @@
 {% block article %}
 <article>
     <div class="container-fluid">
-        <div class="row mb_10">
+        <div class="row_mr0 mb_10">
             <div class="title_header">
                 <h2 class="mb-0 bold">Khóa Học</h2>
             </div>
@@ -40,7 +40,7 @@
     <section class="md-section" style="padding:0;">
         <div class="container-fluid">
 			<div class="textbox-group">
-				<div class="row">
+				<div class="row_mr0">
 					{% for course in course_list%}
 						<div class="col-md-4 col-lg-4 col-xl-3 mt_t20">
 							<!-- textbox -->
@@ -64,36 +64,6 @@
 			</div>
 		</div>
     </section>
-</article>
-<article>
-    <div class="container-fluid">
-        <div class="row mb_10 mt_t30">
-            <div class="title_header">
-                <h2 class="mb-0 bold">Khác</h2>
-            </div>
-        </div>
-    </div>
-    <!-- section -->
-    <section class="md-section" style="padding:0;">
-        <div class="container-fluid">
-				<div class="textbox-group">
-					<div class="row">
-                        <div class="col-md-3 col-lg-3 mt_t20">									
-							<!-- textbox -->
-							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
-									<a href="#"><img src="{% static  'image/course/python.png' %}" alt="python"></a>
-								</div>
-								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">Hỏi Và Đáp</a></h2>
-									<div class="textbox__description"><p class="bold">Đặt câu hỏi và trả lời câu hỏi</p></div>
-								</div>
-							</div><!-- End / textbox -->									
-						</div>
-					</div>
-				</div>
-		</div>
-	</section>
 </article>
 <script>
     $('#0').addClass('active');
