--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -4,7 +4,7 @@
 <!-- article -->
 {% block article %}
 <article class="col-md-12 col-sm-12 col-lg-8 col-xl-9 article_area mt_t10">
-    <div class="row mb_20 padding_lr15">
+    <div class="row_mr0 mb_20 padding_lr15">
         <div class="title_header">
             <h4 class="mb-0 bold">{{subject.name}}</h4>
         </div>
