--- a/App/templates/pages/posts.html
+++ b/App/templates/pages/posts.html
@@ -47,7 +47,7 @@
             </div>
             <div class="card-body">       
                 <div class="textbox-group">
-                    <div class="row">
+                    <div class="row_mr0">
                         {% for course in course_list%}
                             <div class="col-sm-4 col-md-6 col-lg-6 col-xl-6">
                                 <!-- textbox -->
