--- a/App/templates/pages/subjects.html
+++ b/App/templates/pages/subjects.html
@@ -22,7 +22,7 @@
         <!-- section -->
         <section class="md-section">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row_mr0">
                     {% for lessons in lessons_list%}
                     {% if lessons.subject_id_id == subject.subject_id %}
                     <div class="item tns-item tns-slide-active col-md-4 col-lg-3 col-xl-2" id="tns1-item3">
