--- a/App/templates/pages/contact.html
+++ b/App/templates/pages/contact.html
@@ -5,7 +5,7 @@
 {% block article %}
     <article class="col-md-12 col-sm-12 col-lg-9 col-xl-9 article_area mt_t10">
         <section class="md-section">
-            <div class="row_mr0">
+            <div class="row">
                 <div class="contact_left col-md-12 col-sm-12 col-lg-5 col-xl-5 mb_20">
                     <div class="card box-shadow">
                         <div class="card-header">
